@@ -1,6 +1,11 @@
 ##
 ## pg1.internal.genfic.com
 ##
+#
+# PARAMS+
+# MAC=00:11:22:33:44:b4
+# IP6=2001:db8:81::204:de89:3312
+# PARAMS-
 node 'pg1.internal.genfic.com' inherits basenode {
   include general
 }
