@@ -55,12 +55,12 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.15 and has been generated
-	on 2013/01/20.
+        The version you are reading currently is v0.16 and has been generated
+	on 2013/01/21.
       </para>
     </abstract>
 
-    <edition>GLARA v0.15</edition> <!-- Update above paragraph too!! -->
+    <edition>GLARA v0.16</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
       <year>2013</year>
