@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Git server" style="swimlane" vertex="1" parent="1"><mxGeometry x="140" y="20" width="390" height="240" as="geometry"/></mxCell><mxCell id="8" value="sshd" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="230" y="32.5" width="140" height="45" as="geometry"/></mxCell><mxCell id="10" value="gitolite&#xa;(hooks into git)" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="230" y="152.5" width="140" height="50" as="geometry"/></mxCell><mxCell id="13" value="repos" style="shape=folder" vertex="1" parent="2"><mxGeometry x="80" y="32.5" width="120" height="120" as="geometry"/></mxCell><mxCell id="9" value="git" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="70" y="172.5" width="140" height="50" as="geometry"/></mxCell><mxCell id="14" value="" style="endArrow=none" edge="1" parent="2" source="13" target="9"><mxGeometry as="geometry"/></mxCell><mxCell id="17" value="gitolite-shell" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="230" y="90" width="140" height="50" as="geometry"/></mxCell><mxCell id="21" value="" style="endArrow=none" edge="1" parent="2" source="8" target="17"><mxGeometry as="geometry"/></mxCell><mxCell id="22" value="" style="endArrow=none" edge="1" parent="2" source="17" target="10"><mxGeometry as="geometry"/></mxCell><mxCell id="23" value="" style="endArrow=none" edge="1" parent="2" source="17" target="9"><mxGeometry as="geometry"/></mxCell><mxCell id="18" value="gitolite&#xa;admin" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="670" y="67.5" width="40" height="60" as="geometry"/></mxCell><mxCell id="19" value="git&#xa;(and ssh)" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="1"><mxGeometry x="635" y="172.5" width="110" height="47.5" as="geometry"/></mxCell><mxCell id="20" value="" style="endArrow=none" edge="1" parent="1" source="19" target="8"><mxGeometry as="geometry"/></mxCell></root></mxGraphModel>
