@@ -1,3 +1,6 @@
+** (2013-01-21) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Add info on git and gitolite
+
 ** (2013-01-20) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Expand on CA certificate server
 
